service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-2-service-stable
  labels:
    app: demo-app-2  
spec:
  type: ClusterIP
  selector:
    app: demo-app-2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-2-service-canary
  labels:
    app: demo-app-2 
spec:
  type: ClusterIP
  selector:
    app: demo-app-2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
