ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-2-ingress
  labels:
    app: demo-app-2
spec:
  ingressClassName: nginx
  rules:
    - host: lab.local
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-app-2-service-stable
                port:
                  number: 80
